samples/_failures_safe/1761180136_0f1eac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ebd56dd.c: In function ‘main’:
./samples/SAFE/__tmp_9ebd56dd.c:174:9: error: expected declaration or statement at end of input
  174 |         k++;
      |         ^
./samples/SAFE/__tmp_9ebd56dd.c:174:9: error: expected declaration or statement at end of input
